# mmul-harness-instructional

./: CMakeLists.txt  benchmark.cpp  dgemm-basic-ijk.cpp  dgemm-basic-ikj.cpp  dgemm-basic-iterator-optimization.cpp  dgemm-basic-jik.cpp  dgemm-basic-jki.cpp  dgemm-basic-kij.cpp  dgemm-basic-kji.cpp  dgemm-basic.cpp  dgemm-blas.cpp  dgemm-blocked-templated.cpp  dgemm-blocked.cpp  dgemm-strassen-16.cpp  dgemm-strassen-256.cpp  dgemm-strassen-64.cpp  dgemm-strassen-winograd.hpp  run_all
dgemm-basic/: dgemm-basic-ijk.cpp  dgemm-basic-ikj.cpp  dgemm-basic-jik.cpp  dgemm-basic-jki.cpp  dgemm-basic-kij.cpp  dgemm-basic-kji.cpp
dgemm-blocked/: dgemm-blocked-templated.cpp  dgemm-blocked.cpp
dgemm-strassen/: dgemm-strassen-1.cpp  dgemm-strassen-16.cpp  dgemm-strassen-256.cpp  dgemm-strassen-64.cpp
results/: basic-ijk.csv  basic-ikj.csv  basic-jik.csv  basic-jki.csv  basic-kij.csv  basic-kji.csv  blas.csv  blocked-templated.csv  blocked.csv  strassen-1.csv  strassen-16.csv  strassen-256.csv  strassen-64.csv
visualization_scripts/: plot_mflops.py  plot_strassen_comp.py  plot_strassen_graph.py
